# cann

./: .gitignore  CMakeLists.txt  README  README.md
include/ctensor/: ctensor.h
lib/: activations.c  adam.c  fcl.c  initializations.c  linear.c  loss.c  matrix.c  models.c  optimize.c  random.c  tensor.c
src/: ann.c  ann_internal.h  math.c  mem.c  utils.c
